--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="touch-control fireRight"></div>
         <div class="touch-control fireLeft"></div>
     </div>
-
+<script src="gamepademulator.js"></script>
     <script>
     </script>
 <script>
